fix(): Adjust layout on tablet devices

--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -38,9 +38,9 @@ $breakpoints: (
 @mixin mq($width, $type: min) {
     @if map_has_key($breakpoints, $width) {
         $width: map_get($breakpoints, $width);
-        @if $type == max {
-            $width: $width - 1px;
-        }
+        // @if $type == max {
+        //     $width: $width - 1px;
+        // }
         @media only screen and (#{$type}-width: $width) {
             @content;
         }
